# codex-router

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  NOTICE.md  README.md  SECURITY.md  codex-router.ps1  install.ps1  install.sh  model-router.ps1  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
config/: providers.json
docs/: CLAUDE.md  COMPATIBLE-APPS.md  CURSOR.md  DESKTOP-TRAY.md  DEVELOPMENT.md  HOW-IT-WORKS.md  INSTALL.md  MACOS-TRAY.md  TROUBLESHOOTING.md
scripts/: build-desktop-tray.ps1  build-desktop-tray.sh  build-macos-tray-app.sh
src/: anthropic-stream.mjs  api-forwarder.mjs  caller-auth.mjs  catalog.mjs  chatgpt-forwarder.mjs  chatgpt-oauth-status.mjs  claude-config-manager.mjs  claude-doctor.mjs  claude-role-map.mjs  claude-router.mjs  claude-setup.mjs  claude-smoke-test.mjs  codex-account-usage.mjs  codex-binary.mjs  codex-session-names.mjs  compatibility-test.mjs  config-manager.mjs  control.mjs  curate-models.mjs  cursor-config-manager.mjs  cursor-doctor.mjs  cursor-router.mjs  cursor-setup.mjs  doctor.mjs  file-security.mjs  grok-oauth-forwarder.mjs  grok-oauth-session.mjs  grok-oauth-status.mjs  http-utils.mjs  install-manifest.mjs  kimi-oauth-onboarding.mjs  kimi-oauth-session.mjs  legacy-migration.mjs  litellm-config.mjs  model-discovery.mjs  model-registry.mjs  native-alias.mjs  oauth-forwarder.mjs  oauth-status.mjs  paths.mjs  (+30 more)
test/: anthropic-api-integration.test.mjs  caller-auth.test.mjs  catalog.test.mjs  (+47 more)
(+18 files in other folders)
